[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Main_screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/mainlogo2.png" type="Texture" id=2]
[ext_resource path="res://Effects/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Effects/ParallaxBackgroundFront1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/background1.png" type="Texture" id=5]
[ext_resource path="res://Buttons/Startbutton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Buttons/Minigamesbutton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Buttons/Instructionsbutton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Buttons/Optionsbutton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Buttons/Creditsbutton.tscn" type="PackedScene" id=10]
[ext_resource path="res://Buttons/DevelopmentLogbutton.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/mainlogo1.png" type="Texture" id=12]
[ext_resource path="res://Neutralfonts/Arvo36.tres" type="DynamicFont" id=13]
[ext_resource path="res://Assets/mainlogo3.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Music.gd" type="Script" id=15]
[ext_resource path="res://Scripts/Taqaddambutton1.gd" type="Script" id=16]
[ext_resource path="res://Buttons/Taqaddambutton1.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/facebooklogo1.png" type="Texture" id=18]
[ext_resource path="res://Assets/soundoff.png" type="Texture" id=19]
[ext_resource path="res://Assets/soundon.png" type="Texture" id=20]
[ext_resource path="res://Neutralfonts/Arvo24.tres" type="DynamicFont" id=21]
[ext_resource path="res://Effects/Fade_in.tscn" type="PackedScene" id=22]
[ext_resource path="res://Effects/Fade_out.tscn" type="PackedScene" id=23]

[node name="Mainscreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 0.0345901
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 17.0
margin_top = 41.0
margin_right = 723.0
margin_bottom = 1514.0
__meta__ = {
"_edit_lock_": true
}

[node name="transparentblock" type="TextureRect" parent="Menu"]
margin_right = 706.0
margin_bottom = 241.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="ParallaxBackground" type="ParallaxBackground" parent="Menu"]
scroll_ignore_camera_zoom = true

[node name="Mainbg1" parent="Menu/ParallaxBackground" instance=ExtResource( 3 )]

[node name="Mainbg2" parent="Menu/ParallaxBackground" instance=ExtResource( 4 )]

[node name="Transparentbg1" type="Sprite" parent="Menu/ParallaxBackground"]
position = Vector2( 360, 760 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="HorizontalButtons" type="HBoxContainer" parent="Menu"]
margin_top = 245.0
margin_right = 706.0
margin_bottom = 1473.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="VBoxContainer" parent="Menu/HorizontalButtons"]
margin_right = 706.0
margin_bottom = 1228.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="Startbutton" parent="Menu/HorizontalButtons/Buttons" instance=ExtResource( 6 )]
margin_right = 706.0
margin_bottom = 60.0
focus_mode = 0
enabled_focus_mode = 0
scene_to_load = "res://Screens/Start.tscn"

[node name="Minigamesbutton" parent="Menu/HorizontalButtons/Buttons" instance=ExtResource( 7 )]
margin_top = 75.0
margin_right = 706.0
margin_bottom = 135.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Instructionsbutton" parent="Menu/HorizontalButtons/Buttons" instance=ExtResource( 8 )]
margin_top = 150.0
margin_right = 706.0
margin_bottom = 210.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Optionsbutton" parent="Menu/HorizontalButtons/Buttons" instance=ExtResource( 9 )]
margin_top = 225.0
margin_right = 706.0
margin_bottom = 285.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Creditsbutton" parent="Menu/HorizontalButtons/Buttons" instance=ExtResource( 10 )]
margin_top = 300.0
margin_right = 706.0
margin_bottom = 360.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Logbutton" parent="Menu/HorizontalButtons/Buttons" instance=ExtResource( 11 )]
margin_top = 375.0
margin_right = 706.0
margin_bottom = 435.0
focus_mode = 0
enabled_focus_mode = 0

[node name="TaqaddamLogo" type="TextureRect" parent="."]
margin_top = 770.0
margin_right = 720.0
margin_bottom = 890.0
texture = ExtResource( 12 )
stretch_mode = 4

[node name="Taqaddam" type="Label" parent="."]
margin_top = 880.0
margin_right = 720.0
margin_bottom = 1441.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.376471, 0.403922, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Taqaddam is an innovative programme that supports the development of life skills with young people and their educators across several countries in the Middle East and North Africa. It is designed to equip young people with a wide set of enduring personal and professional strengths and skills that will help enable them to lead successful and fulfilling lives.
"
align = 1
autowrap = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 17, 41 )
texture = ExtResource( 14 )
offset = Vector2( 350, 100 )
__meta__ = {
"_edit_lock_": true
}

[node name="Music&URLs" type="Control" parent="."]
margin_left = 16.0
margin_top = 1516.0
margin_right = 722.0
margin_bottom = 1516.0
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="TaqaddamURL" type="Control" parent="Music&URLs"]
margin_top = -789.0
margin_right = 706.0
margin_bottom = -789.0
script = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Taqaddambutton1" parent="Music&URLs/TaqaddamURL" instance=ExtResource( 17 )]
margin_left = -84.0
margin_top = -540.0
margin_right = -5.0
margin_bottom = -467.0
script = null

[node name="BritishCouncilURL" type="Control" parent="Music&URLs"]
margin_top = -4.0
margin_right = 706.0
margin_bottom = -4.0
script = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="BritishCouncilbutton1" type="Button" parent="Music&URLs/BritishCouncilURL"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 547.0
margin_top = -1325.0
margin_right = -77.0
margin_bottom = -1249.0
icon = ExtResource( 18 )
flat = true

[node name="MusicButton" type="TextureButton" parent="Music&URLs"]
margin_left = 471.0
margin_top = -1322.0
margin_right = 546.0
margin_bottom = -1252.0
focus_mode = 0
toggle_mode = true
pressed = true
enabled_focus_mode = 0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_lock_": true
}

[node name="version" type="Label" parent="Music&URLs"]
margin_left = -10.0
margin_top = -32.0
margin_right = 701.0
margin_bottom = -2.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.0784314, 0.301961, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Version 0.1.1 Taqaddam 2019-2020"
valign = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Fade" parent="." instance=ExtResource( 22 )]
visible = false

[node name="Fade2" parent="." instance=ExtResource( 23 )]
visible = false
[connection signal="pressed" from="Music&URLs/TaqaddamURL/Taqaddambutton1" to="Music&URLs/TaqaddamURL" method="_on_Taqaddambutton1_pressed"]
[connection signal="pressed" from="Music&URLs/BritishCouncilURL/BritishCouncilbutton1" to="Music&URLs/BritishCouncilURL" method="_on_BritishCouncilbutton1_pressed"]
[connection signal="pressed" from="Music&URLs/MusicButton" to="Music&URLs" method="_on_MusicButton_pressed"]
[connection signal="fade_finished" from="Fade" to="." method="_on_Fade_fade_finished"]
[connection signal="fade_finished" from="Fade2" to="." method="_on_Fade2_fade_finished"]
